# octantis

./: .env  Cargo.toml  configuration.yaml
migrations/: 20221220015738_create_customer_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: customers.rs  mod.rs  status.rs
tests/: status.rs
