[package]
name = "octantis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
config = "0.13.3"
hyper = "0.14.23"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
